src/test/deca/context/invalid/tests/FIELD-already-defined.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 14: Double définition
// 
// Historique:
//    cree le 01/01/2022


class Test {
    int field;

    float field;
}
